colang-cli/tests/samples/good/bool_array_methods.co
fun main() {
  var v = [true; 5];
  assert(v.pop());
  assert(v.len() == 4);
}
