colang-cli/tests/samples/compile_error/rvalue_push.co
fun main() {
  [1, 2, 3].push(4);
}
